# Hangman_game

./: .gitignore  CHANGELOG.md  DEVELOPERS.md  INSTALL.md  MANIFEST.in  README  README.md  TRANSFORMATION.md  hangman-game.py  pyproject.toml  setup.py
hangman_game/: __init__.py  __main__.py  cli.py
hangman_game/core/: __init__.py  game_logic.py  statistics.py
hangman_game/data/: words.json
hangman_game/ui/: __init__.py  gui.py  hangman_art.py
tests/: test_game.py
