[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hangman-game"
version = "1.0.0"
description = "A feature-rich Hangman word guessing game with GUI"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Tony Stone"}
]
keywords = ["hangman", "game", "puzzle", "word-game", "tkinter", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Tony-Stone-Code/Hangman_game"
"Bug Reports" = "https://github.com/Tony-Stone-Code/Hangman_game/issues"
"Source" = "https://github.com/Tony-Stone-Code/Hangman_game"

[project.scripts]
hangman = "hangman_game.ui.gui:main"
hangman-cli = "hangman_game.cli:main"

[tool.setuptools]
packages = ["hangman_game", "hangman_game.core", "hangman_game.ui", "hangman_game.data"]

[tool.setuptools.package-data]
hangman_game = ["data/*.json"]
